--- a/source/emissary/index.html.slim
+++ b/source/emissary/index.html.slim
@@ -17,14 +17,14 @@ subnav:
     title: "Overview"
     slug: "overview"
   -
-    title: "Video"
-    slug: "video"
-  -
     title: "API Solution"
     slug: "proven-api"
   -
     title: "Benefits"
     slug: "benefits"
+  -
+    title: "Emissary in Action"
+    slug: "video"
   # -
   #   title: "Comparison"
   #   slug: "comparison"
@@ -104,24 +104,14 @@ section.section-article.bg-gray-2.container-image-fill.lozad data-background-ima
       p.lead Why should health data exchange be so inefficient and costly, when information is easily – even instantaneously – accessible in almost all other aspects of our modern lives?
     .columns.small-12.medium-8.large-5
       p.headline-3.text-bold Emissary helps you implement effortlessly, innovate brilliantly, deliver value swiftly and scale confidently.
-/ .strip.strip-greens.strip-small
-section.section-article.bg-dark.strip-greens-dark id=current_page.data.subnav[1].slug data-magellan-target=current_page.data.subnav[1].slug
-  .row.align-center.align-middle
-    .columns.small-12.medium-8.large-5
-      h3.headline-3.text-bold Emissary in action
-      p.lead We’re solving health IT’s most pressing challenge today. Our Emissary platform enables seamless data exchange between EHRs and with leading-edge administration and clinical applications.
-      p.lead See how Emissary enables complete, real-time access to patient records, preventing a life-threatening condition that otherwise would be missed.
-      /= partial "partials/snippets/button", :locals => { :label => "Learn how Emissary works", :url => "https://www.sansorohealth.com/what-is-emissary", :button_classes => "button success", :item_id => "product-emissary" }
-    .columns.small-12.medium-4.large-6
-      = Kramdown::Document.new(data.site.videos["y0y8MVijxDirsUyvbYzUa"].custom_form).to_html  
-
-section.section-article.bg-gray-11 id=current_page.data.subnav[2].slug data-magellan-target=current_page.data.subnav[2].slug
+.strip.strip-greens.strip-small
+section.section-article.bg-gray-11 id=current_page.data.subnav[1].slug data-magellan-target=current_page.data.subnav[1].slug
   .row.align-center.align-middle
     .columns.small-12.medium-8.large-4
       h3.headline-3 Emissary is a proven API solution
       p.lead Emissary is a proven application programming interface (API) solution that allows healthcare information to be exchanged across any EHR platform – while ensuring the utmost security for PHI.
       p Modern times call for modern measures. Emissary allows you to focus on your product – not on the integration. Within days, you are up and running with comprehensive APIs that work across EHRs.
-      = partial "partials/snippets/button", :locals => { :label => "Learn how Emissary works", :url => "https://www.sansorohealth.com/what-is-emissary", :button_classes => "button success", :item_id => "product-emissary" }
+      = partial "partials/snippets/button", :locals => { :label => "Learn how Emissary works", :url => "##{current_page.data.subnav[3].slug}", :button_classes => "button success", :item_id => "product-emissary" }
     .columns.small-12.medium-4.large-6
       img.lozad src=loader_rect data-src="https://images.ctfassets.net/189dvqdsjh46/TvIRvb1AwzfXo7MsUHmJ6/df7185acdd6125ae327784c41f0de549/emissary-product-diagram-3.png" alt="emissary diagram"
 
@@ -136,12 +126,12 @@ section.section-article.bg-gray-3
       p.lead <strong>Datica Emissary</strong> is a centralized API toolset that is installed within the data systems on-site at the hospital, such as EHRs, thus giving unprecedented access, control, and scalability of clinical data.
 
 .strip.strip-small.strip-greens
-section.section-article.bg-gray-12 id=current_page.data.subnav[3].slug data-magellan-target=current_page.data.subnav[3].slug
+section.section-article.bg-gray-12 id=current_page.data.subnav[2].slug data-magellan-target=current_page.data.subnav[2].slug
   .row.align-center
     .columns.small-12.medium-10.large-8
       h3.headline-3 Hello Emissary. Goodbye data silos.
       p Emissary makes health data liquid. It provides a robust set of REST APIs that read and write to EHRs through EHR vendor-supported software modules. It standardizes EHR integration through universal real-time APIs and a unified data model. To connect to an EHR, health IT partners code once to the Emissary APIs. Emissary also provides tools to assist with the monitoring and management of the environment, including advanced security and auditing features.
-      .row.small-up-1.medium-up-2.group.collapse
+      .row.small-up-1.medium-up-2.collapse
         - current_page.data.product_benefits.each do | item |
           .column.group--sm
             .media-object
@@ -150,7 +140,18 @@ section.section-article.bg-gray-12 id=current_page.data.subnav[3].slug data-mage
               .media-object-section.media-object--info.main-section.align-self-middle
                 h4.headline-4.margin-bottom-small = item.title
                 p = item.desc
+    .columns.small-12.align-center.text-center
+      = partial "partials/snippets/button", :locals => { :label => "Start Your Integration Project", :url => "##{current_page.data.subnav.last.slug}", :button_classes => "button nomargin", :data_track_group => "compliance", :item_id => "features_start", :icon => "icon-chevron-down", :icon_align => "right", :expand => "false" }
 
+section.section-article.bg-dark.strip-greens-dark id=current_page.data.subnav[3].slug data-magellan-target=current_page.data.subnav[3].slug
+  .row.align-center.align-middle
+    .columns.small-12.medium-8.large-5
+      h3.headline-3.text-bold See Emissary in action
+      p.lead We’re solving health IT’s most pressing challenge today. Our Emissary platform enables seamless data exchange between EHRs and with leading-edge administration and clinical applications.
+      p.lead See how Emissary enables complete, real-time access to patient records, preventing a life-threatening condition that otherwise would be missed.
+      /= partial "partials/snippets/button", :locals => { :label => "Learn how Emissary works", :url => "https://www.sansorohealth.com/what-is-emissary", :button_classes => "button success", :item_id => "product-emissary" }
+    .columns.small-12.medium-4.large-6
+      = Kramdown::Document.new(data.site.videos["y0y8MVijxDirsUyvbYzUa"].custom_form).to_html  
 
 /section.section-article.bg-white id=current_page.data.subnav[4].slug data-magellan-target=current_page.data.subnav[4].slug
   .row.align-center
@@ -181,7 +182,7 @@ section.masthead.bg-dark.bg-greens-grad.product-cmi.relative id=current_page.dat
   .section-article--lg.relative.z-10
     .row.align-center.align-middle
       .columns.small-12.medium-6.large-5
-        h2.headline-3.group--2x Schedule a conversation to learn more about Datica Emissary
+        h2.headline-3.group--2x Schedule a conversation to learn more about Datica Emissary.
         / = partial("partials/cards/quote-customer", :locals => { :customer => data.site.customers['66BznN8Y482iSswswQAice'], :classes => "container-color--tint-50 " })
         .callout.callout--dark-alpha
           blockquote.quote--serif
