Minor changes, updated video

--- a/source/emissary/index.html.slim
+++ b/source/emissary/index.html.slim
@@ -1,9 +1,9 @@
 ---
-title: "Compliant Managed Integration (CMI) | Datica Cloud Compliance"
-summary: "Compliant Managed Integration (CMI) handles HIPAA compliant, scalable, and secure data exchange with any EHR."
-navTitle: "Datica CMI"
+title: "Datica Emissary | A scalable, centralized API for clinical data of any type"
+summary: "Emissary is a proven application programming interface (API) solution that allows healthcare information to be exchanged across any EHR platform – while ensuring the utmost security for PHI."
+navTitle: "Emissary"
 author: "Datica, Inc."
-tags: "compliance, HIPAA, HL7, FHIR, interoperability, EHR, integration"
+tags: "HL7, FHIR, interoperability, EHR, integration, API"
 ogType: "product"
 customCSS: "products, products-mastheads"
 layout: products
