--- a/source/emissary/index.html.slim
+++ b/source/emissary/index.html.slim
@@ -63,6 +63,7 @@ ruby:
   current_page.data.share_image = 'https://images.ctfassets.net/189dvqdsjh46/nGfjpkdV4GIIk6ii6wQiE/7488832f05e372d1f13933a343a75826/share-cmi.jpg'
   current_page.data.date = DateTime.now.strftime('%B %-d, %Y')
   the_form = data.site.forms['4nyR5f2AgXCJ27BPl6rtoK']
+  featured_img = "https://images.ctfassets.net/189dvqdsjh46/4viYx7WtJfxqBIsghvYurm/e85dbec993174b41b750e50811ec29fd/emissary-video-poster.jpg"
 scss:
   .bg-white-on-small {
     @media screen and (max-width: 640px) {
