Added stacked-for-small to Mediakit
Addresses #177

--- a/source/press/mediakit.html.slim
+++ b/source/press/mediakit.html.slim
@@ -15,7 +15,7 @@ section.section-article.bg-gray-12
       h1.headline-5.spaced-out Datica Brand Assets
       /p.lead.group Download Datica brand assets here.
       p Visit our Datica brand elements repo on Github, or download the zip directly.
-      .button-group.group
+      .button-group.group.stacked-for-small
         = partial "partials/snippets/button", :locals => { :label => "Datica Brand Assets On Github", :url => "https://github.com/daticahealth/brand-assets/", :button_classes => "button hollow", :icon => "icon-github-octocat", :icon_align => "left", :item_id => "brand_repo", :data_track_group => "assets", :expand => false }
         = partial "partials/snippets/button", :locals => { :label => "Download Datica Brand Assets (.zip)", :title => "Download the assets as a zip file", :url => "https://github.com/daticahealth/brand-assets/archive/master.zip", :button_classes => "button primary", :icon => "icon-cloud-download", :icon_align => "right", :item_id => "download_logos", :data_track_group => "assets", :expand => false }
       .content-dynamic.group
