--- a/source/assets/scss/settings.scss
+++ b/source/assets/scss/settings.scss
@@ -218,7 +218,7 @@ $product-colors: (
 $foundation-palette:(
   default:   $color_green,
   primary:   $color_green,
-  secondary: $gray-5,
+  secondary: $color_blue,
   tertiary:  white,
   dark:      $gray-2,
   info:      $gray-7,
