--- a/source/partials/cards/_featured-blog.erb
+++ b/source/partials/cards/_featured-blog.erb
@@ -70,7 +70,7 @@ card_summary = truncate_words(strip_tags(entry_summary), :length => 45)
     </a><% end %>
 
     <% if url_segment == "innovation" %><a class="container-image-fill card-header-image card-header-image--compact container-gray-3 lozad" href="<%= related_post_path %>" title="Read '<%= post["title"] %>/'" data-background-image="/public/img/art/art-sound-bars-purple.svg">
-        <span class="card-header-subhead">Healthcare Innovators Podcast</span>
+        <span class="card-header-subhead">Datica Podcasts</span>
         <h2 class="card-header-title headline-5 ribbon--gray-1"><%= post["title"] %></h2>
         <%= inline_svg("icon-video-play-circle", class: "icon-size--xlarge card-header-icon svg-color--white") %>
     </a><% end %>
