--- a/source/careers/index.html.slim
+++ b/source/careers/index.html.slim
@@ -128,9 +128,13 @@ scss:
       .columns.small-12.medium-6
         h3.headline-2.text-bold.text-minty Open Positions
         p.lead Datica is always looking for talented new team members who are looking for tough challenges. If you are curious about career opportunities with Datica, please email <a href="mailto:nikki.kent@sansorohealth.com">Nikki Kent</a>.
+
+        = partial "partials/snippets/button", :locals => { :label => "Check for Open Positions", :url => "https://workforcenow.adp.com/jobs/apply/posting.html?client=SANSORO&amp;ccId=19000101_000001&amp;type=MP&amp;lang=en_US", :button_classes => "button tertiary", :icon => "icon-chevron-right", :icon_align => "right", :expand => false }
+
       .columns.small-12.medium-6
-        | <div id="BambooHR" class="group"><script src="//datica.bamboohr.com/js/jobs2.php" type="text/javascript"></script><div id="BambooHR-Footer">Powered by<a href="http://www.bamboohr.com" target="_blank" rel="external"><img src="//www.bamboohr.com/img/footer-logo.png" alt="BambooHR - HR software"/></a></div></div>
-        p.text-small.text-italic Note: the positions listed show locations because of the way our HR software works. All positions are indeed remote. =)
+
+        / | <div id="BambooHR" class="group"><script src="//datica.bamboohr.com/js/jobs2.php" type="text/javascript"></script><div id="BambooHR-Footer">Powered by<a href="http://www.bamboohr.com" target="_blank" rel="external"><img src="//www.bamboohr.com/img/footer-logo.png" alt="BambooHR - HR software"/></a></div></div>
+        / p.text-small.text-italic Note: the positions listed show locations because of the way our HR software works. All positions are indeed remote. =)
   .strip.strip-small.strip-bright
   section.bg-gray-3
     .row.full-width.align-middle.grayscale
