Careers tweaks; blog brand conditionals.
reducing font size in card titles, with longer titles now.

--- a/source/assets/scss/modules/blog.scss
+++ b/source/assets/scss/modules/blog.scss
@@ -51,6 +51,6 @@ body.blog {
         }
     }
 }
-.card-featured-section .card-header-title {
-    font-size: 1.4rem;
-}
+// .card-featured-section .card-header-title {
+//     font-size: 1.4rem;
+// }
