--- a/source/assets/scss/views/blog-section.scss
+++ b/source/assets/scss/views/blog-section.scss
@@ -52,6 +52,6 @@ body.blog {
         }
     }
 }
-.card-featured-section .card-header-title {
-    font-size: 1.4rem;
-}
+// .card-featured-section .card-header-title {
+//     font-size: 1.4rem;
+// }
