Better conditionals on SH check

--- a/source/blog/index.html.erb
+++ b/source/blog/index.html.erb
@@ -61,14 +61,16 @@ current_cta = data.site.cta.to_a.sort_by{ |id, cta| cta['_meta']['updated_at'] }
                     <div class="columns medium-3 large-3 show-for-medium">
                         <% if post.has_key?("featured_image") %>
                             <% 
-                                if post.categories_blog != "Sansoro Health" && post.has_key?("share_image")
-                                    feat_img = post["featured_image"]["url"]
-                                else
+                                # if post.categories_blog != "Sansoro Health"
+                                #     feat_img = post["featured_image"]["url"]
+                                if post.categories_blog == "Sansoro Health" && post.has_key?("share_image")
                                     feat_img = post["share_image"]["url"]
+                                else
+                                    feat_img = post["featured_image"]["url"]
                                 end
                              %>
                             <a href="/blog/<%= post["slug"] %>" title="Read this post">
-                                <img class="lozad thumbnail" src="https://images.ctfassets.net/189dvqdsjh46/10BSgwANXD4R7OKMT1j20G/3ba1fd760173695d4e4fb9ec4199fab9/loader-square.png" data-src="<%= feat_img %>?fit=thumb&fm=jpg&fl=progressive&w=300&h=300" alt="<%= post["featured_image"]["title"] %>">
+                                <img class="lozad thumbnail" src="<%= loader_square %>" data-src="<%= feat_img %>?fit=thumb&fm=jpg&fl=progressive&w=300&h=300" alt="<%= post["featured_image"]["title"] %>">
                             </a>
                         <% end %>
                     </div>
@@ -91,8 +93,15 @@ current_cta = data.site.cta.to_a.sort_by{ |id, cta| cta['_meta']['updated_at'] }
             <div class="column group">
                 <h4 class="headline-5"><a href="/blog/<%= post["slug"] %>" title="Read this post"><%= post["title"] %></a></h4>
                 <% if post.has_key?("featured_image") %>
+                    <% 
+                        if post.categories_blog == "Sansoro Health" && post.has_key?("share_image")
+                            feat_img = post["share_image"]["url"]
+                        else
+                            feat_img = post["featured_image"]["url"]
+                        end
+                     %>
                     <a href="/blog/<%= post["slug"] %>" title="Read this post">
-                        <img class="lozad thumbnail float-left" width="80" src="https://images.ctfassets.net/189dvqdsjh46/10BSgwANXD4R7OKMT1j20G/3ba1fd760173695d4e4fb9ec4199fab9/loader-square.png" data-src="<%= post["featured_image"]["url"] %>?fit=thumb&fm=jpg&fl=progressive&w=160&h=160&q=40" alt="<%= post["featured_image"]["title"] %>">
+                        <img class="lozad thumbnail float-left" width="80" src="<%= loader_square %>" data-src="<%= feat_img %>?fit=thumb&fm=jpg&fl=progressive&w=160&h=160&q=40" alt="<%= post["featured_image"]["title"] %>">
                     </a>
                 <% end %>
                 <div class="pub-date"> <%= post['pub_date'].strftime('%B %-d, %Y') %></div>
