Post-launch podcast styling fixes; TOC fix
Media element thumbs; bg pattern in masthead. TOC fix in blogs.

--- a/source/assets/scss/modules/icons.scss
+++ b/source/assets/scss/modules/icons.scss
@@ -14,13 +14,13 @@
         &--small { // inline with content
             width:  $thing-s;
             height: $thing-s;
-            @media all and (max-width: 40rem){
-                height: auto;
-            }
+            // @media all and (max-width: 40rem){
+            //     width: auto;
+            //     height: auto;
+            // }
             // vertical-align: middle;
         }
         &--medium {
-            width:  $thing-m;
             width:  $thing-m;
             height: $thing-m;
             // vertical-align: middle;
