--- a/source/podcast/index.html.erb
+++ b/source/podcast/index.html.erb
@@ -19,14 +19,14 @@ feed_url: "https://fourbyfourhealth.podbean.com/feed.xml"
     art_4x4 = 'https://images.ctfassets.net/189dvqdsjh46/OCqNIzzZeoJWSTjECEZFp/8c84b526bba5c19e748db5d51568d876/podcast-4x4-small.jpg'
     art_hip = 'https://images.ctfassets.net/189dvqdsjh46/62u8jLbOQyiVfPMZFT8MvY/7a5cc175ff0f418c4ee94f0b26430a2a/podcast-hip-small.jpg'
 %>
-<div class="container-color--dark-alt container-image--middle lozad" data-background-image="/public/img/art/art-sound-bars-purple.svg">
+<div class="bg-gray-2 container-image-fill lozad" data-background-image="/public/img/art/art-sound-bars-purple.svg">
     <%= partial "partials/head/header", :locals => { :style => "light" } %>
     <section class="section-article">
         <div class="row align-middle align-center">
-            <div class="columns small-12 medium-6 large-4">
-                <h1 class="headline-2 text-white text-bold text-right">Datica Podcasts</h1>
+            <div class="columns small-12 shrink">
+                <h1 class="headline-2 text-white text-bold text-right-on-large">Datica Podcasts</h1>
             </div>
-            <div class="columns small-12 medium-6 large-8">
+            <div class="columns small-12 medium-large-8 large-7 xlarge-5">
                 <div class="media-object group">
                     <div class="media-object-section">
                         <a href="#podcast-4x4" title="view podcast">
